--- a/package.json
+++ b/package.json
@@ -1,16 +1,24 @@
 {
-	"name": "fcc-learn-npm-package-json",
-	"author": "Mohamadou Mouktar",
-	"description": "A projet to learn building somme simple and awesome apps with nodejs.",
-	"dependencies": {
-		"express": "^4.14.0"
-	},
-	"main": "server.js",
-	"scripts": {
-		"start": "node server.js"
-	},
-	"repository": {
-		"type": "git",
-		"url": "https://idontknow/todo.git"
-	}
+    "name": "fcc-learn-npm-package-json",
+    "author": "Mohamadou Mouktar",
+    "description": "A projet to learn building somme simple and awesome apps with nodejs.",
+    "keywords": [
+        "fcc",
+        "npm",
+        "freecodecamp"
+    ],
+    "license": "MIT",
+    "version": "1.2.0",
+    "dependencies": {
+        "express": "^4.14.0",
+        "moment": "^2.10.2"
+    },
+    "main": "server.js",
+    "scripts": {
+        "start": "node server.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://idontknow/todo.git"
+    }
 }
